# sweetie_bot_proto2_movements

./: CMakeLists.txt  README.md
compound_action/: applause_you_must_be_upgraded.json  brohoof.json  brohoof_acquitance_procedure.json  brohoof_do_you_want.json  complex_hybrid_state_machines.json  greeting_friendship_programs.json  head_ask_about_sister.json  head_shake_dizzy.json  hoof_stamp_do_you_want_attention.json  introduce_herself_friendship.json  menace.json  menace_prepare_to_die.json  point_control_you.json  point_do_not_touch.json  point_i_have_remembered_you.json  prance_maximum_fun.json  seizure_cutie_mark_acquisition.json  sing_song1.json  sing_song2.json
joint_state/: body_crouched.json  body_lying.json  body_nominal.json  crouched.json  head_nominal.json  lying.json  nominal.json  walking.json
joint_trajectories/: applause.json  begone3.json  bow_end.json  brohoof_end.json  buck3.json  crouch.json  crouch_begin.json  crouch_end.json  farewell.json  head_shake.json  head_shake_emphasized.json  head_shake_slow.json  head_turn_right.json  hoof_stamp.json  introduce_herself.json  lean_forward_begin.json  lean_forward_end.json  lie_down_begin.json  lie_down_end.json  little_shake_fast.json  little_shake_slow.json  look_around.json  look_on_hoof.json  look_on_printer.json  look_on_printer_fast.json  menace.json  menace_canceled.json  point_right.json  seizure.json  seizure_evil.json  tail_shake.json
move_base/: backslide_left_20_20_80.json  backslide_left_20_20_90.json  backslide_right_10_00_40.json  backslide_right_10_00_45.json  drift_left.json  (+28 more)
(+56 files in other folders)
